# ols-ensembl-loader

./: .gitignore  .travis.yml  NOTICE  README.md  loader.py  pyproject.toml  requirements.txt
bio/ensembl/ontology/: OLSHiveLoader.py  db.py  hive.py  loader.py  models.py  ontologies.ini  utils.py
bio/ensembl/ontology/hive/: OLSHiveLoader.py  OLSImportReport.py  OLSLoadPhiBaseIdentifier.py  OLSOntologyLoader.py  OLSTermsLoader.py  __init__.py
bio/ensembl/ontology/loader/: __init__.py  db.py  models.py  ols.py
scripts/: dump_ddl.py  load_phi_identifier.py  loader.py
sql/: tables.sql
tests/: .env.dist  __init__.py  hive.in  test_basic.py  test_remote.py
