# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# pyproject.toml -- OLS Ensembl loader project configuration

## Generic configuration
[project]
name = "ols-ensembl-loader"
version = "1.0"
requires-python = ">= 3.5"
description = "OLS Ensembl loader"
readme = "README.md"
authors = [
    {name = "Ensembl", email = "dev@ensembl.org"},
]
license = {text = "Apache License 2.0"}
keywords = [
    "ols",
    "ensembl",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "coreapi == 2.3.3",
    "dateutils == 0.6.7",
    "ensembl-hive @ git+https://github.com/Ensembl/ensembl-hive.git@main",
    "hal_codec ~= 1.0.2",
    "inflection == 0.3.1",
    "mysqlclient == 1.4.6",
    "ols-client @ git+https://github.com/Ensembl/ols-client.git@main",
    "PyMySQL == 0.9.3",
    "SQLAlchemy == 1.3.15",
]

[project.optional-dependencies]
cicd = [
    "nose",
    "coverage",
    "python-coveralls",
]

[project.urls]
homepage = "https://www.ensembl.org"
repository = "https://github.com/Ensembl/ols-ensembl-loader"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)

# For additional information on `setuptools` configuration see:
#    https://setuptools.pypa.io/en/latest/userguide/quickstart.html
#    https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
#    https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel"
]
build-backend = "setuptools.build_meta"
